Refactor and optimize Rebounding package